--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 mortgage calculator
+
+
+This mortgage calculator will provide you with a loan amortization schedule. Letting you know how many payments will be required, the monthly payment amount, 
+how much of the monthly payment will go towards paying the principal and interest. 
+
+To use this just download and open up 'Index.html'.
