--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-mortgage calculator
+Mortgage Calculator<h1>
 
 
 This mortgage calculator will provide you with a loan amortization schedule. Letting you know how many payments will be required, the monthly payment amount, 
